--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Sources/LogInBG.jpg
 V0.1/Win32/Debug/CGLogIn_u.dcu
 V0.1/Win32/Debug/CGLogIn_u.dcu
 *.jpg
+V0.1/Win32/Debug/CardGame_p.exe
+V0.1/Win32/Debug/CGLogIn_u.dcu
