--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ V0.1/Win32/Debug/CGLogIn_u.dcu
 *.jpg
 V0.1/Win32/Debug/CardGame_p.exe
 V0.1/Win32/Debug/CGLogIn_u.dcu
+V0.1/Win32/Debug/CGLogIn_u.dcu
+Sources/LogInBG.jpg
