erver socket implement

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ V0.1/Win32/Debug/CardGame_p.exe
 V0.1/Win32/Debug/CGLogIn_u.dcu
 V0.1/Win32/Debug/CGLogIn_u.dcu
 Sources/LogInBG.jpg
+V0.1/Win32/Debug/CardGame_p.exe
+V0.1/Win32/Debug/CGLogIn_u.dcu
+V0.1/Win32/Debug/CGServer_u.dcu
