Stqarted db implementation

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Sources/LogInBG.jpg
 V0.1/Win32/Debug/CardGame_p.exe
 V0.1/Win32/Debug/CGLogIn_u.dcu
 V0.1/Win32/Debug/CGServer_u.dcu
+V0.1/Users_players.accdb
