--- a/V0.1/CardGame_p.dproj
+++ b/V0.1/CardGame_p.dproj
@@ -106,6 +106,10 @@
             <Form>frmServer</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="CGClient_u.pas">
+            <Form>Client</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
